# wx_bot

./: .gitignore  .pdm-python  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
wx_bot/: app.py  wsgi.py
wx_bot/cli/: __init__.py
wx_bot/config/: __init__.py
wx_bot/handlers/: __init__.py  api.py  base.py  helper.py  wechat.py
wx_bot/models/: __init__.py
wx_bot/static/: index.html  post_wechat_article.html
