[project]
name = "wx_bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "huiwan_code", email = "huiwancode@gmail.com"},
]
dependencies = [
    "wechatpy==1.8.14",
    "Flask==1.1.1",
    "werkzeug==2.0.3",
    "Flask-RESTful==0.3.8",
    "Flask-Redis==0.1.0",
    "gunicorn==20.0.4",
    "langchain==0.1.13",
    "jinja2==3.0.3",
    "itsdangerous==2.0.1",
    "cryptography>=42.0.7",
    "chardet>=5.2.0",
    "langchain-text-splitters>=0.0.2",
    "bs4>=0.0.2",
    "chromadb>=0.5.0",
    "qianfan>=0.3.13.1",
    "langchain-openai>=0.1.7",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
index-url = "https://mirrors.aliyun.com/pypi/simple"
